Fix width on bio .wrap so that mobile display fits within screen without white space on sides.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -206,7 +206,6 @@ p, a {
 
 .bio {
   min-height: 400px;
-  width: 100%;
   padding: 10px 15px;
   justify-content: center; }
   .bio .wrap {
